fix overflows & scrollbars

--- a/public/css/pokemon_details.css
+++ b/public/css/pokemon_details.css
@@ -131,8 +131,8 @@ h1 {
 #varieties,
 #evolution {
   text-align: center;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  height: 500px;
+  overflow-y: auto;
 
   img {
     width: 100%;
