--- a/public/css/search.css
+++ b/public/css/search.css
@@ -58,7 +58,7 @@
   display: flex;
   justify-content: space-evenly;
   max-height: 200px;
-  overflow-y: scroll;
+  overflow-y: auto;
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
